course02/chapter07/healthy-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: "healthy-again"
  namespace: default
  labels:
    app: "healthy-again"
    service: "common-service"
spec:
  containers:
  - name: healthy-again
    image: "ivplay4689/healthy:9ee6a3"
    resources:
      limits:
        cpu: 500m
        memory: 500Mi
      requests:
        cpu: 500m
        memory: 200Mi
    ports:
        - containerPort:  80
          name:  healthy
  restartPolicy: Always
