course02/chapter07/nginx-pod-nodeport.yml
apiVersion: v1
kind: Pod
metadata:
  name: "nginx-nodeport"
  namespace: default
  labels:
    app: "nginx-nodeport"

spec:
  containers:
  - name: nginx-nodeport
    image: "nginx:latest"
    resources:
      limits:
        cpu: 500m
        memory: 500Mi
      requests:
        cpu: 400m
        memory: 400Mi
    ports:
    - containerPort:  80
      name:  http
  restartPolicy: Always
