course02/chapter07/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: "nginx-again"
  namespace: default
  labels:
    app: "nginx-again"
    service: "common-service"
    nodeport: nginx-nodeport
    clusterIp: nginx-clusterip

spec:
  containers:
  - name: nginx-again
    image: "nginx:latest"
    resources:
      limits:
        cpu: 500m
        memory: 500Mi
      requests:
        cpu: 400m
        memory: 400Mi
    ports:
    - containerPort:  80
      name:  http
  restartPolicy: Always
