course02/chapter07/3.healthy-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: healthy-service-with-ingress
  namespace: default
spec:
  selector:
    app: ivplay4689_healthy
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: healthy-service-with-ingress
    protocol: TCP
    port: 80
    targetPort: 80
