course02/chapter07/7.np-healthy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  healthy-with-k8spg
  namespace: default
  labels:
    app: healthy-with-k8spg
spec:
  selector:
    matchLabels:
      app: ivplay4689_healthy
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25% # 2 at a time with 8 replicaset verified
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ivplay4689_healthy
    spec:
      containers:
      - name: ivplay4689-healthy
        image: ivplay4689/healthy:9ee6a3
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 512Mi
        startupProbe: # 2 min timeout
          httpGet:
            path: /
            port: 80
          failureThreshold: 24
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /live
            port: 80
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  healthy
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: healthy-with-k8spg
  namespace: default
spec:
  selector:
    app: ivplay4689_healthy
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: healthy-with-k8spg
    protocol: TCP
    port: 80
    targetPort: 80
