course02/chapter07/cluster-ip-service.yml

apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-service
  namespace: default
spec:
  selector:
    app: "nginx-clusterip"
  type: ClusterIP
  ports:
  - name: cluster-ip-service
    protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30011 : can not even assign if type is ClusterIP
