course02/chapter07/cluster-ip.yml

apiVersion: v1
kind: Service
metadata:
  name: nginx-cluster-ip
  namespace: default
spec:
  selector:
    app: nginx-cluster-ip
  type: NodePort
  ports:
  - name: nginx-cluster-ip
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30011
