course02/chapter07/node-port-service.yml

apiVersion: v1
kind: Service
metadata:
  name: node-port-service
  namespace: default
spec:
  selector:
    app: "nginx-nodeport"
  type: NodePort
  ports:
  - name: node-port-service
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30011
