course02/chapter07/6.ingress-routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: default
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class:  nginx # this fucking this was missing!
spec:
  rules:
    - http:
        paths:
        - path: /healthy(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: healthy-service-with-ingress
              port:
                number: 80
    
    - http:
        paths:
        - path: /nginx(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: nginx-service-with-ingress
              port:
                number: 80
