course02/chapter07/10.network-policy-healthy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: healthy-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ivplay4689_healthy
  policyTypes:
    - Egress
