course02/chapter07/9.network-policy-pg.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-healthy-app-to-access-db
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ivplay4689_healthy
      ports:
        - protocol: TCP
          port: 5432
