course02/chapter07/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  # which pods get this policy.
  podSelector:
    matchLabels:
      role: db
  
  policyTypes: 
    - Ingress
  ingress: 
    - from: 
        - podSelector:
            matchLabels: 
              name: api-pod
        # we can also select namepsace!!! wow! 
        # - namespaceSelector:
        #     matchLabels: 
        #       name: api-pod-namespace
        
        # we can also block ips
        # - ipBlock:
        #   cidr: 172.17.0.0/16
        #   except:
        #     - 172.17.0.5

      ports:
        - protocol: TCP 
          port: 3306
